feat: :hammer: get tuit by ID
